--- a/src/rodnik.html
+++ b/src/rodnik.html
@@ -116,88 +116,116 @@
                 <div class="rodnik__body">
                     <div class="rodnik__info">
                         <div class="rodnik__info-item">
-                            <div class="rodnik__info-item-title _dotted-title">
+                            <div class="rodnik__info-item-body">
                                 <img src="img/location.svg" alt="">
-                                <h2 class="_title">Расположение</h2>
-                                <span></span>
+                                <div class="rodnik__info-item-content">
+                                    <div class="rodnik__info-item-title _dotted-title">
+                                        <h2 class="_title">Расположение</h2>
+                                        <span></span>
+                                    </div>
+                                    <p class="rodnik__info-item-text">Родник расположен в 1,5 км. севернее с. Никольское
+                                        в
+                                        живописной пойме р. Урал. <br>
+                                        Родник имеет каптаж из стального цилиндра диаметром 0,6 м установленного над
+                                        <br>родником. Поляна возле родника и подъезд
+                                        очищены от растительности.
+                                        <br><br>
+                                        Для удобства, подхода к спуску устроено ограждение. Для безопасного спуска
+                                        выложены<br>
+                                        каменные ступени и установлены
+                                        перила. Для отдыха установлена беседка со столом и <br> лавками, установлена
+                                        емкость для
+                                        сбора ТБО. Установлены таблички.
+                                    </p>
+                                    <button class="rodnik__info-item-coords">Координаты</button>
+                                </div>
                             </div>
-                            <p class="rodnik__info-item-text">Родник расположен в 1,5 км. севернее с. Никольское в
-                                живописной пойме р. Урал. <br>
-                                Родник имеет каптаж из стального цилиндра диаметром 0,6 м установленного над
-                                <br>родником. Поляна возле родника и подъезд
-                                очищены от растительности.
-                                <br><br>
-                                Для удобства, подхода к спуску устроено ограждение. Для безопасного спуска выложены<br>
-                                каменные ступени и установлены
-                                перила. Для отдыха установлена беседка со столом и <br> лавками, установлена емкость для
-                                сбора ТБО. Установлены таблички.
-                            </p>
-                            <button class="rodnik__info-item-coords">Координаты</button>
                         </div>
                         <div class="rodnik__info-item">
-                            <div class="rodnik__info-item-title _dotted-title _hidden">
+                            <div class="rodnik__info-item-body">
                                 <img src="img/tree.svg" alt="">
-                                <h2 class="_title _visible">Работы по облагораживанию родника</h2>
-                                <h2 class="_title _hidden-title">Облагораживание <br><label>родника</label></h2>
-                                <span></span>
-                            </div>
-                            <div class="rodnik__info-item-text">
-                                <ol>
-                                    <li>- спланирована территория;</li>
-                                    <li>- уборка травы и мусора с прилегающей территории;</li>
-                                    <li>- берегоукрепление над родником;</li>
-                                    <li>- очистка родника от старых веток и листьев;</li>
-                                    <li>- очистка родника от грязи, ила;</li>
-                                    <li>- изготовление и установка металлического каптажа с водоотводной трубой;</li>
-                                    <li>- отсыпка щебнем и ПГС площадки перед родником и площадки под беседку;</li>
-                                    <li>- укладка камнем основание родника и дорожки к нему;</li>
-                                    <li>- оборудование и укрепление каменных ступеней спуска к роднику;</li>
-                                    <li>- изготовлен и установлен мостик через ручей родника;</li>
-                                    <li>- изготовление и установка металлического каркаса для ландшафтного дизайна;</li>
-                                    <li>- выполнили ограждение к роднику;</li>
-                                    <li>- изготовление и установка ограждений с поручнем для спуска к роднику;</li>
-                                    <li>- изготовление и установка беседки со столом и скамейками для отдыха;</li>
-                                    <li>- изготовлены и установлены таблички с названием родника и данными по качеству
-                                        воды
-                                        в роднике;</li>
-                                </ol>
-                                <br>
-                                <span>Начало работ по восстановлению существующего родника – 24.05.2013 г.
-                                    Окончание работ – 14.07.2013 г.</span>
+                                <div class="rodnik__info-item-content">
+                                    <div class="rodnik__info-item-title _dotted-title _hidden">
+                                        <h2 class="_title _visible">Работы по облагораживанию родника</h2>
+                                        <h2 class="_title _hidden-title">Облагораживание <br><label>родника</label></h2>
+                                        <span></span>
+                                    </div>
+                                    <div class="rodnik__info-item-text">
+                                        <ol>
+                                            <li>- спланирована территория;</li>
+                                            <li>- уборка травы и мусора с прилегающей территории;</li>
+                                            <li>- берегоукрепление над родником;</li>
+                                            <li>- очистка родника от старых веток и листьев;</li>
+                                            <li>- очистка родника от грязи, ила;</li>
+                                            <li>- изготовление и установка металлического каптажа с водоотводной трубой;
+                                            </li>
+                                            <li>- отсыпка щебнем и ПГС площадки перед родником и площадки под беседку;
+                                            </li>
+                                            <li>- укладка камнем основание родника и дорожки к нему;</li>
+                                            <li>- оборудование и укрепление каменных ступеней спуска к роднику;</li>
+                                            <li>- изготовлен и установлен мостик через ручей родника;</li>
+                                            <li>- изготовление и установка металлического каркаса для ландшафтного
+                                                дизайна;</li>
+                                            <li>- выполнили ограждение к роднику;</li>
+                                            <li>- изготовление и установка ограждений с поручнем для спуска к роднику;
+                                            </li>
+                                            <li>- изготовление и установка беседки со столом и скамейками для отдыха;
+                                            </li>
+                                            <li>- изготовлены и установлены таблички с названием родника и данными по
+                                                качеству
+                                                воды
+                                                в роднике;</li>
+                                        </ol>
+                                        <br>
+                                        <span>Начало работ по восстановлению существующего родника – 24.05.2013 г.
+                                            Окончание работ – 14.07.2013 г.</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="rodnik__info-item">
-                            <div class="rodnik__info-item-title _dotted-title">
+                            <div class="rodnik__info-item-body">
                                 <img src="img/mark.svg" alt="">
-                                <h2 class="_title">Открытие</h2>
-                                <span></span>
+                                <div class="rodnik__info-item-content">
+                                    <div class="rodnik__info-item-title _dotted-title">
+                                        <h2 class="_title">Открытие</h2>
+                                        <span></span>
+                                    </div>
+                                    <p class="rodnik__info-item-text">
+                                        Торжественное открытие с праздничным концертом проводилось совместно с <br>
+                                        администрацией и жителями села Никольское
+                                        Оренбургского района <br>
+                                        16 июля 2013 года в 12:00.
+                                        <br><br>
+                                        На открытии родник, благоустроенный коллективом Военизированной части по Акту
+                                        <br>
+                                        передан
+                                        администрации с. МО Никольский сельсовет для дальнейшего использования. <br>
+                                        Было
+                                        подписано соглашение с администрацией с.
+                                        Никольское о сохранении и <br> поддержании родника в хорошем состоянии.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="rodnik__info-item-text">
-                                Торжественное открытие с праздничным концертом проводилось совместно с <br>
-                                администрацией и жителями села Никольское
-                                Оренбургского района <br>
-                                16 июля 2013 года в 12:00.
-                                <br><br>
-                                На открытии родник, благоустроенный коллективом Военизированной части по Акту <br>
-                                передан
-                                администрации с. МО Никольский сельсовет для дальнейшего использования. <br> Было
-                                подписано соглашение с администрацией с.
-                                Никольское о сохранении и <br> поддержании родника в хорошем состоянии.
-
-                            </p>
                         </div>
                         <div class="rodnik__info-item">
-                            <div class="rodnik__info-item-title _dotted-title _hidden">
+                            <div class="rodnik__info-item-body">
                                 <img src="img/list.svg" alt="">
-                                <h2 class="_title _visible">Дополнительная информация</h2>
-                                <h2 class="_title _hidden-title">Доп. информация</h2>
-                                <span></span>
+                                <div class="rodnik__info-item-content">
+                                    <div class="rodnik__info-item-title _dotted-title _hidden">
+                                        <h2 class="_title _visible">Дополнительная информация</h2>
+                                        <h2 class="_title _hidden-title">Доп. информация</h2>
+                                        <span></span>
+                                    </div>
+                                    <p class="rodnik__info-item-text">Привлечено 20 работников ВЧ к восстановлению
+                                        родника; <br>
+                                        Площадь очищенных земель - 1300 м2 <br>
+                                        Собрано и вывезено при благоустройстве 0,4 т. скошенной травы, бытового мусора,
+                                        <br>
+                                        спиленного кустарника и сухостоя.
+                                    </p>
+                                </div>
                             </div>
-                            <p class="rodnik__info-item-text">Привлечено 20 работников ВЧ к восстановлению родника; <br>
-                                Площадь очищенных земель - 1300 м2 <br>
-                                Собрано и вывезено при благоустройстве 0,4 т. скошенной травы, бытового мусора, <br>
-                                спиленного кустарника и сухостоя.
-                            </p>
                         </div>
                     </div>
                     <div class="rodnik__gallery">
