add path left position

--- a/src/rodnik.html
+++ b/src/rodnik.html
@@ -372,23 +372,75 @@
                     </div>
                     <div class="feedback__form">
                         <h2 class="feedback__form-title _title">Оставьте отзыв о роднике</h2>
-                        <form action="#" class="form">
-                            <div class="form__ocenka">
-                                <div>Общая оценка</div>
-                                <div style="display: inherit;">
-                                    <span>Отлично</span>
-                                    <img src="img/rate2.svg" alt="">
+                        <div class="feedback__form-body">
+                            <form id="comment_form" class="feedback__form-form">
+                                <div class="feedback__form-top">
+                                    <label class="feedback__form-overall_score">
+                                        <span>Общая оценка</span>
+                                        <input type="text" name="overall_score" value="Нормально" readonly="">
+                                    </label>
+                                    <label class="feedback__form-user_score">
+                                        <input type="number" class="user_score_hidden" name="user_score" min="0" max="5" value=""
+                                            required="">
+                                        <input type="text" class="user_score_output" value="" readnoly="">
+                                        <!-- <span>Ваша оценка</span> -->
+                                        <div class="feedback__form-score_wrapper score_wrapper">
+                                            <i data-id="1" data-value="Ужасно" class="star-1">
+                                                <svg width="28" height="27" viewBox="0 0 28 27" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M27.9573 10.0801C27.8547 9.76421 27.5817 9.53399 27.2531 9.4863L18.6937 8.24251L14.8658 0.486311C14.7188 0.18851 14.4155 0 14.0834 0C13.7513 0 13.448 0.18851 13.301 0.486311L9.47313 8.24251L0.913744 9.4863C0.585116 9.53399 0.312093 9.76421 0.209491 10.0801C0.106831 10.3959 0.192449 10.7426 0.430283 10.9744L6.62384 17.0118L5.16171 25.5366C5.10558 25.8639 5.24017 26.1947 5.50884 26.3899C5.77744 26.585 6.13358 26.6109 6.42766 26.4564L14.0834 22.4314L21.7392 26.4564C21.8668 26.5234 22.0063 26.5566 22.1451 26.5566C22.326 26.5566 22.506 26.5004 22.658 26.39C22.9266 26.1948 23.0612 25.864 23.0051 25.5367L21.543 17.0118L27.7365 10.9745C27.9744 10.7426 28.06 10.3959 27.9573 10.0801Z"
+                                                        fill="black" fill-opacity="0.1"></path>
+                                                </svg>
+                                            </i>
+                                            <i data-id="2" data-value="Плохо" class="star-2">
+                                                <svg width="28" height="27" viewBox="0 0 28 27" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M27.9573 10.0801C27.8547 9.76421 27.5817 9.53399 27.2531 9.4863L18.6937 8.24251L14.8658 0.486311C14.7188 0.18851 14.4155 0 14.0834 0C13.7513 0 13.448 0.18851 13.301 0.486311L9.47313 8.24251L0.913744 9.4863C0.585116 9.53399 0.312093 9.76421 0.209491 10.0801C0.106831 10.3959 0.192449 10.7426 0.430283 10.9744L6.62384 17.0118L5.16171 25.5366C5.10558 25.8639 5.24017 26.1947 5.50884 26.3899C5.77744 26.585 6.13358 26.6109 6.42766 26.4564L14.0834 22.4314L21.7392 26.4564C21.8668 26.5234 22.0063 26.5566 22.1451 26.5566C22.326 26.5566 22.506 26.5004 22.658 26.39C22.9266 26.1948 23.0612 25.864 23.0051 25.5367L21.543 17.0118L27.7365 10.9745C27.9744 10.7426 28.06 10.3959 27.9573 10.0801Z"
+                                                        fill="black" fill-opacity="0.1"></path>
+                                                </svg>
+                                            </i>
+                                            <i data-id="3" data-value="Нормально" class="star-3">
+                                                <svg width="28" height="27" viewBox="0 0 28 27" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M27.9573 10.0801C27.8547 9.76421 27.5817 9.53399 27.2531 9.4863L18.6937 8.24251L14.8658 0.486311C14.7188 0.18851 14.4155 0 14.0834 0C13.7513 0 13.448 0.18851 13.301 0.486311L9.47313 8.24251L0.913744 9.4863C0.585116 9.53399 0.312093 9.76421 0.209491 10.0801C0.106831 10.3959 0.192449 10.7426 0.430283 10.9744L6.62384 17.0118L5.16171 25.5366C5.10558 25.8639 5.24017 26.1947 5.50884 26.3899C5.77744 26.585 6.13358 26.6109 6.42766 26.4564L14.0834 22.4314L21.7392 26.4564C21.8668 26.5234 22.0063 26.5566 22.1451 26.5566C22.326 26.5566 22.506 26.5004 22.658 26.39C22.9266 26.1948 23.0612 25.864 23.0051 25.5367L21.543 17.0118L27.7365 10.9745C27.9744 10.7426 28.06 10.3959 27.9573 10.0801Z"
+                                                        fill="black" fill-opacity="0.1"></path>
+                                                </svg>
+                                            </i>
+                                            <i data-id="4" data-value="Хорошо" class="star-4">
+                                                <svg width="28" height="27" viewBox="0 0 28 27" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M27.9573 10.0801C27.8547 9.76421 27.5817 9.53399 27.2531 9.4863L18.6937 8.24251L14.8658 0.486311C14.7188 0.18851 14.4155 0 14.0834 0C13.7513 0 13.448 0.18851 13.301 0.486311L9.47313 8.24251L0.913744 9.4863C0.585116 9.53399 0.312093 9.76421 0.209491 10.0801C0.106831 10.3959 0.192449 10.7426 0.430283 10.9744L6.62384 17.0118L5.16171 25.5366C5.10558 25.8639 5.24017 26.1947 5.50884 26.3899C5.77744 26.585 6.13358 26.6109 6.42766 26.4564L14.0834 22.4314L21.7392 26.4564C21.8668 26.5234 22.0063 26.5566 22.1451 26.5566C22.326 26.5566 22.506 26.5004 22.658 26.39C22.9266 26.1948 23.0612 25.864 23.0051 25.5367L21.543 17.0118L27.7365 10.9745C27.9744 10.7426 28.06 10.3959 27.9573 10.0801Z"
+                                                        fill="black" fill-opacity="0.1"></path>
+                                                </svg>
+                                            </i>
+                                            <i data-id="5" data-value="Отлично" class="star-5">
+                                                <svg width="28" height="27" viewBox="0 0 28 27" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M27.9573 10.0801C27.8547 9.76421 27.5817 9.53399 27.2531 9.4863L18.6937 8.24251L14.8658 0.486311C14.7188 0.18851 14.4155 0 14.0834 0C13.7513 0 13.448 0.18851 13.301 0.486311L9.47313 8.24251L0.913744 9.4863C0.585116 9.53399 0.312093 9.76421 0.209491 10.0801C0.106831 10.3959 0.192449 10.7426 0.430283 10.9744L6.62384 17.0118L5.16171 25.5366C5.10558 25.8639 5.24017 26.1947 5.50884 26.3899C5.77744 26.585 6.13358 26.6109 6.42766 26.4564L14.0834 22.4314L21.7392 26.4564C21.8668 26.5234 22.0063 26.5566 22.1451 26.5566C22.326 26.5566 22.506 26.5004 22.658 26.39C22.9266 26.1948 23.0612 25.864 23.0051 25.5367L21.543 17.0118L27.7365 10.9745C27.9744 10.7426 28.06 10.3959 27.9573 10.0801Z"
+                                                        fill="black" fill-opacity="0.1"></path>
+                                                </svg>
+                                            </i>
+                                        </div>
+                                    </label>
                                 </div>
-                            </div>
-                            <div class="form__message">
-                                <textarea id="" cols="30" rows="10" placeholder="Напишите отзыв"
-                                    name="message"></textarea>
-                            </div>
-                            <div class="form__button">
-                                <button type="submit">Авторизоваться через <img src="img/vk.svg" alt="">
-                                    Отправить</button>
-                            </div>
-                        </form>
+                                <div class="feedback__form-bottom">
+                                    <textarea name="user_comments" value="" placeholder="Напишите отзыв"></textarea>
+                                </div>
+                            </form>
+                            <a class="form__button btn_send_comment disabled"
+                                href="https://oauth.vk.com/authorize?client_id=8215610&amp;redirect_uri=http://erem19si.beget.tech/%d0%bf%d1%80%d0%b8%d0%bc%d0%b5%d1%80/&amp;display=popup&amp;scope=email&amp;response_type=code&amp;state=">Авторизироваться
+                                через <svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.6859 21.85V15.4104C24.6885 16.0699 25.9538 19.474 28.5026 21.85H35C33.3755 17.9309 30.9518 14.4596 27.9103 11.696C30.2436 8.22406 32.7205 4.95578 33.9321 0H28.0269C25.7115 3.79199 24.491 8.23376 20.6859 11.1626V0H12.1154L14.1615 2.73489V12.4816C10.841 12.0645 8.59743 5.49887 6.16538 0H0C2.24359 7.42881 6.9641 23.7315 20.6859 21.85Z"
+                                        fill="white"></path>
+                                </svg>
+                                и отправить</a>
+                        </div>
                     </div>
                 </div>
             </div>
