--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
                             <span>генеральный директор ООО «Газпром добыча Оренбург»</span>
                         </div>
                     </div>
-                    <a href="" class="main__next">
+                    <a href="#map" class="main__next">
                         <img src="img/arrow-down.svg" alt="">
                     </a>
                 </div>
@@ -673,7 +673,7 @@
 
                             </div>
                             <div class="map__norodnik">
-                                <h4 class="map__norodnik-title">Выберите район</h4>
+                                <h4 class="map__norodnik-title">Родники отсутствуют</h4>
                                 <div class="map__norodnik-selected">В этом районе пока родников не добавлено</div>
                                 <div class="map__norodnik-body">
                                     <img src="img/carbon_time.svg" alt="">
@@ -849,7 +849,7 @@
             </div>
         </div>
     </footer>
-    <div class="form__output">
+    <!-- <div class="form__output">
         <div class="form__output-overlay"></div>
         <div class="form__output-body">
             <button class="form__output-close">
@@ -862,7 +862,21 @@
                 <p>Комментарий успешно отправлен на модерацию</p>
             </div>
         </div>
+    </div> -->
+
+    <div class="rodniki__preload">
+        <img src="img/preloader.gif" alt="">
     </div>
+    <div class="regions__preload">
+        <img src="img/preloader.gif" alt="">
+    </div>
+    <div class="loftloader__wrapper">
+        <span></span>
+        <div class="top"></div>
+        <div class="bottom"></div>
+    </div>
+
+
     <script src="files/swiper.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
