--- a/src/rodnik.html
+++ b/src/rodnik.html
@@ -97,6 +97,18 @@
                     <a href="/" class="back">
                         <img src="img/arrow-left.svg" alt="">
                     </a>
+                    <div class="breadcamps">
+                        <ol>
+                            <li class="breadcamps__back">
+                                <a href="/">Абдулинский район</a>
+                            </li>
+                            <a href="/" class="breadcamps__back-btn">
+                                <img src="img/slider-arrow.svg" alt="">
+                            </a>
+                            <li class="breadcamps__current">Адамовксик ключ</li>
+                        </ol>
+                    </div>
+
                     <h1 class="rodnik-main__title"> <mark>Никольский</mark> родник</h1>
                     <div class="rodnik-main__adress">
                         <img src="img/location-s.svg" alt="">
@@ -380,8 +392,8 @@
                                         <input type="text" name="overall_score" value="Нормально" readonly="">
                                     </label>
                                     <label class="feedback__form-user_score">
-                                        <input type="number" class="user_score_hidden" name="user_score" min="0" max="5" value=""
-                                            required="">
+                                        <input type="number" class="user_score_hidden" name="user_score" min="0" max="5"
+                                            value="" required="">
                                         <input type="text" class="user_score_output" value="" readnoly="">
                                         <!-- <span>Ваша оценка</span> -->
                                         <div class="feedback__form-score_wrapper score_wrapper">
@@ -434,14 +446,15 @@
                             </form>
                             <a class="form__button btn_send_comment disabled"
                                 href="https://oauth.vk.com/authorize?client_id=8215610&amp;redirect_uri=http://erem19si.beget.tech/%d0%bf%d1%80%d0%b8%d0%bc%d0%b5%d1%80/&amp;display=popup&amp;scope=email&amp;response_type=code&amp;state=">Авторизироваться
-                                через <svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                через <svg width="35" height="22" viewBox="0 0 35 22" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M20.6859 21.85V15.4104C24.6885 16.0699 25.9538 19.474 28.5026 21.85H35C33.3755 17.9309 30.9518 14.4596 27.9103 11.696C30.2436 8.22406 32.7205 4.95578 33.9321 0H28.0269C25.7115 3.79199 24.491 8.23376 20.6859 11.1626V0H12.1154L14.1615 2.73489V12.4816C10.841 12.0645 8.59743 5.49887 6.16538 0H0C2.24359 7.42881 6.9641 23.7315 20.6859 21.85Z"
                                         fill="white"></path>
                                 </svg>
                                 и отправить</a>
 
-                                
+
                         </div>
                     </div>
                 </div>
