--- a/src/rodnik.html
+++ b/src/rodnik.html
@@ -99,17 +99,14 @@
         <section class="main rodnik-main" style="background-image: url('img/reodnik-main2.png');">
             <div class="rodnik-main__container _container">
                 <div class="rodnik-main__body">
-                    <a href="/" class="back">
+                    <a href="/" class="back" data-regionname="Оренбургский">
                         <img src="img/arrow-left.svg" alt="">
                     </a>
                     <div class="breadcamps">
                         <ol>
                             <li class="breadcamps__back">
-                                <a href="/" data-regionname="Абдулинский">Абдулинский район</a>
+                                <a href="/" data-regionname="Оренбургский">Абдулинский район <span><img src="img/slider-arrow.svg" alt=""></span></a>
                             </li>
-                            <a href="/" class="breadcamps__back-btn">
-                                <img src="img/slider-arrow.svg" alt="">
-                            </a>
                             <li class="breadcamps__current">Адамовксик ключ</li>
                         </ol>
                     </div>
