--- a/src/index.html
+++ b/src/index.html
@@ -857,7 +857,7 @@
             </div>
         </div>
     </footer>
-    <!-- <div class="form__output">
+    <!-- <div class="form__output _sent">
         <div class="form__output-overlay"></div>
         <div class="form__output-body">
             <button class="form__output-close">
@@ -871,6 +871,28 @@
             </div>
         </div>
     </div> -->
+
+    <!--<div class="form__output _error-text">
+            <div class="form__output-body">
+                <div class="form__output-content">
+                    <span>
+                        <img src="img/form_no.svg" alt="">
+                    </span>
+                    <p>Поле 'Напишите отзыв' не заполнено</p>
+                </div>
+            </div>
+        </div> -->
+
+        <!--<div class="form__output _error-ocenka">
+                <div class="form__output-body">
+                    <div class="form__output-content">
+                        <span>
+                            <img src="img/form_no.svg" alt="">
+                        </span>
+                        <p>Поле 'Напишите отзыв' не заполнено</p>
+                    </div>
+                </div>
+            </div> -->
 
     <div class="rodniki__preload">
         <img src="img/preloader.gif" alt="">
