--- a/src/rodnik.html
+++ b/src/rodnik.html
@@ -99,13 +99,13 @@
         <section class="main rodnik-main" style="background-image: url('img/reodnik-main2.png');">
             <div class="rodnik-main__container _container">
                 <div class="rodnik-main__body">
-                    <a href="/" class="back" data-regionname="Оренбургский">
+                    <a href="#" onclick="history.back()" class="back" data-regionname="Оренбургский">
                         <img src="img/arrow-left.svg" alt="">
                     </a>
                     <div class="breadcamps">
                         <ol>
                             <li class="breadcamps__back">
-                                <a href="/" data-regionname="Оренбургский">Абдулинский район <span><img src="img/slider-arrow.svg" alt=""></span></a>
+                                <a href="#" onclick="history.back()" data-regionname="Оренбургский">Абдулинский район <span><img src="img/slider-arrow.svg" alt=""></span></a>
                             </li>
                             <li class="breadcamps__current">Адамовксик ключ</li>
                         </ol>
@@ -131,7 +131,29 @@
                     <div class="rodnik__info">
                         <div class="rodnik__info-item">
                             <div class="rodnik__info-item-body">
-                                <img src="img/location.svg" alt="">
+                                <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g filter="url(#filter0_d_45_277)">
+                                        <rect x="4" width="44" height="44" rx="22" fill="white" />
+                                        <path
+                                            d="M26.5 10C21.262 10 17.0001 14.2619 17.0001 19.494C16.9657 27.1473 26.139 33.4933 26.5 33.7498C26.5 33.7498 36.0343 27.1473 35.9999 19.4999C35.9999 14.2619 31.738 10 26.5 10ZM26.5 24.2499C23.8757 24.2499 21.75 22.1243 21.75 19.4999C21.75 16.8756 23.8757 14.75 26.5 14.75C29.1243 14.75 31.25 16.8756 31.25 19.4999C31.25 22.1243 29.1243 24.2499 26.5 24.2499Z"
+                                            fill="#0079C2" />
+                                    </g>
+                                    <defs>
+                                        <filter id="filter0_d_45_277" x="0" y="0" width="52" height="52" filterUnits="userSpaceOnUse"
+                                            color-interpolation-filters="sRGB">
+                                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                                                result="hardAlpha" />
+                                            <feOffset dy="4" />
+                                            <feGaussianBlur stdDeviation="2" />
+                                            <feComposite in2="hardAlpha" operator="out" />
+                                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0" />
+                                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_45_277" />
+                                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_45_277" result="shape" />
+                                        </filter>
+                                    </defs>
+                                </svg>
+
                                 <div class="rodnik__info-item-content">
                                     <div class="rodnik__info-item-title _dotted-title">
                                         <h2 class="_title">Расположение</h2>
@@ -157,7 +179,29 @@
                         </div>
                         <div class="rodnik__info-item">
                             <div class="rodnik__info-item-body">
-                                <img src="img/tree.svg" alt="">
+                            <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g filter="url(#filter0_d_45_273)">
+                                    <rect x="4" width="44" height="44" rx="22" fill="white" />
+                                    <path
+                                        d="M25.751 12C24.7449 11.9999 23.767 12.3331 22.9703 12.9477C22.1737 13.5624 21.6032 14.4236 21.3479 15.3969C20.2457 15.6857 19.2919 16.3774 18.675 17.3354C18.0581 18.2934 17.8229 19.4479 18.0161 20.5709C17.2057 21.1142 16.5915 21.9036 16.264 22.8226C15.9365 23.7416 15.9131 24.7415 16.1971 25.6748C16.4812 26.6081 17.0577 27.4254 17.8417 28.0062C18.6256 28.5869 19.5755 28.9002 20.551 28.9H23.151V31.175C23.151 32.072 23.879 32.8 24.776 32.8H26.726C27.623 32.8 28.351 32.072 28.351 31.175V28.9H30.951C31.9266 28.9002 32.8765 28.5869 33.6604 28.0062C34.4444 27.4254 35.0209 26.6081 35.305 25.6748C35.589 24.7415 35.5656 23.7416 35.2381 22.8226C34.9106 21.9036 34.2964 21.1142 33.486 20.5709C33.6792 19.4479 33.444 18.2934 32.8271 17.3354C32.2102 16.3774 31.2564 15.6857 30.1542 15.3969C29.8989 14.4236 29.3284 13.5624 28.5317 12.9477C27.7351 12.3331 26.7572 11.9999 25.751 12ZM24.451 28.9H27.051V31.175C27.051 31.2612 27.0168 31.3439 26.9559 31.4048C26.8949 31.4658 26.8122 31.5 26.726 31.5H24.776C24.6899 31.5 24.6072 31.4658 24.5462 31.4048C24.4853 31.3439 24.451 31.2612 24.451 31.175V28.9Z"
+                                        fill="#0079C2" />
+                                </g>
+                                <defs>
+                                    <filter id="filter0_d_45_273" x="0" y="0" width="52" height="52" filterUnits="userSpaceOnUse"
+                                        color-interpolation-filters="sRGB">
+                                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                                            result="hardAlpha" />
+                                        <feOffset dy="4" />
+                                        <feGaussianBlur stdDeviation="2" />
+                                        <feComposite in2="hardAlpha" operator="out" />
+                                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0" />
+                                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_45_273" />
+                                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_45_273" result="shape" />
+                                    </filter>
+                                </defs>
+                            </svg>
+
                                 <div class="rodnik__info-item-content">
                                     <div class="rodnik__info-item-title _dotted-title _hidden">
                                         <h2 class="_title _visible">Работы по облагораживанию родника</h2>
