form sent measseges don

--- a/src/index.html
+++ b/src/index.html
@@ -858,7 +858,6 @@
         </div>
     </footer>
     <!-- <div class="form__output _sent">
-        <div class="form__output-overlay"></div>
         <div class="form__output-body">
             <button class="form__output-close">
                 <img src="img/close.svg" alt="">
@@ -872,8 +871,12 @@
         </div>
     </div> -->
 
-    <!--<div class="form__output _error-text">
+    <div class="form__error-container">
+        <div class="form__output _error-text _open">
             <div class="form__output-body">
+                <button class="form__output-close">
+                    <img src="img/close.svg" alt="">
+                </button>
                 <div class="form__output-content">
                     <span>
                         <img src="img/form_no.svg" alt="">
@@ -881,18 +884,22 @@
                     <p>Поле 'Напишите отзыв' не заполнено</p>
                 </div>
             </div>
-        </div> -->
+        </div>
 
-        <!--<div class="form__output _error-ocenka">
-                <div class="form__output-body">
-                    <div class="form__output-content">
-                        <span>
-                            <img src="img/form_no.svg" alt="">
-                        </span>
-                        <p>Поле 'Напишите отзыв' не заполнено</p>
-                    </div>
+        <div class="form__output _error-ocenka _open">
+            <div class="form__output-body">
+                <button class="form__output-close">
+                    <img src="img/close.svg" alt="">
+                </button>
+                <div class="form__output-content">
+                    <span>
+                        <img src="img/form_no.svg" alt="">
+                    </span>
+                    <p>Поле 'Напишите отзыв' не заполнено</p>
                 </div>
-            </div> -->
+            </div>
+        </div>
+    </div>
 
     <div class="rodniki__preload">
         <img src="img/preloader.gif" alt="">
