--- a/src/index.html
+++ b/src/index.html
@@ -915,7 +915,7 @@
 
     <div class="hidden__categories">
         <li>
-            <span class="rodnik__link"
+            <span class="rodnik__link" data-maplink="https://yandex.ru/maps/-/CCURA6du~B"
                 data-href="https://xn--90afdfhanwedfrhd8b3j1b.xn--p1ai/%d0%bd%d0%b8%d0%ba%d0%be%d0%bb%d1%8c%d1%81%d0%ba%d0%b8%d0%b9/"
                 data-rodnikname="Никольский" data-rodnikcoords=""
                 data-rodniklocation="с. Никольское, Оренбургский район"></span>
