changr rodnik links in 1200<

--- a/src/index.html
+++ b/src/index.html
@@ -871,7 +871,7 @@
         </div>
     </div> -->
 
-    <div class="form__error-container">
+    <!-- <div class="form__error-container">
         <div class="form__output _error-text _open">
             <div class="form__output-body">
                 <button class="form__output-close">
@@ -899,7 +899,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="rodniki__preload">
         <img src="img/preloader.gif" alt="">
