check the bag about double slideing

--- a/src/index.html
+++ b/src/index.html
@@ -98,12 +98,15 @@
                 </nav>
 
                 <div class="header__logo">
+
                     <a href="">
                         <img class="logo-sovet" src="img/logo-sovet.svg" alt="">
-
                     </a>
                     <a href="">
                         <img class="logo-main" src="img/logo.svg" alt="">
+                    </a>
+                    <a href="" class="footer__top-item">
+                        <img src="img/gazprom.svg" alt="">
                     </a>
                 </div>
             </div>
