--- a/src/rodnik.html
+++ b/src/rodnik.html
@@ -96,7 +96,7 @@
         </div>
     </header>
     <main class="page">
-        <section class="main rodnik-main" style="background-image: url('img/reodnik-main2.png');">
+        <section class="main rodnik-main" style="background-image: url('img/rodnik-sec.png');">
             <div class="rodnik-main__container _container">
                 <div class="rodnik-main__body">
                     <a href="#" onclick="history.back()" class="back" data-regionname="Оренбургский">
